--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -77,6 +77,7 @@
 @import "scss/quicksearch";
 @import "scss/raumzeit";
 @import "scss/report";
+@import "scss/responsive";
 @import "scss/resources";
 @import "scss/sidebar";
 @import "scss/select";
