--- a/resources/assets/stylesheets/scss/navigation.scss
+++ b/resources/assets/stylesheets/scss/navigation.scss
@@ -214,49 +214,11 @@ body:not(.fixed) #navigation-level-1-items {
     }
 }
 
-// Toggle mechanism for touch/hover
-#barTopMenu-toggle {
-    display: none;
-}
-label[for="barTopMenu-toggle"] {
-    @include background-icon(hamburger, info_alt, 16);
-    background-position: 0 center;
-    background-repeat: no-repeat;
-
-    color: $white;
-    line-height: $bar-bottom-container-height;
-    overflow: hidden;
-    padding-left: (5px + 16px + 5px); // padding + icon + next padding
-    white-space: nowrap;
-
-    height: 0;
-    max-height: 0;
-    opacity: 0;
-    @media not prefers-reduced-motion {
-        transition: all 300ms;
-    }
-
-    // 1/4 of the screen's width, creates a bigger hover area
-    width: 25vw;
-
-}
-html.no-touch {
-    #barTopMenu-toggle,
-    label[for="barTopMenu-toggle"] {
-        pointer-events: none;
-    }
-}
-
 body.fixed {
     #navigation-level-1 {
         height: $header-height;
     }
 
-    label[for="barTopMenu-toggle"] {
-        opacity: 1;
-        max-height: $bar-bottom-container-height;
-        height: auto;
-    }
     #navigation-level-1-items {
         background-color: $base-color;
 
@@ -318,8 +280,7 @@ body.fixed {
 
         }
     }
-    #responsive-menu:hover #navigation-level-1-items,
-    #barTopMenu-toggle:checked ~ #navigation-level-1-items {
+    #responsive-menu:hover #navigation-level-1-items {
         display: block;
     }
 }
