--- a/resources/assets/stylesheets/scss/table_of_contents.scss
+++ b/resources/assets/stylesheets/scss/table_of_contents.scss
@@ -31,11 +31,9 @@ ul.numberedchapters {
     width: 0%;
     z-index: 100;
     position: absolute;
-    right: 2px;
-    top: -10px;
+    right: -22px;
+    top: -25px;
     background-color: $white;
-    min-height: 10%;
-    max-height: 100%;
     border: 1px solid #d0d7e3;
     margin-bottom: 10px;
     -webkit-box-shadow: 2px 2px #ccc;
@@ -59,7 +57,7 @@ ul.numberedchapters {
     height: 58px;
     overflow: hidden;
     background-color: $white;
-    color: $black !important;
+    color: $black;
     margin-bottom: -0.5em;
     border-bottom: thin solid #d0d7e3;
     display: flex;
@@ -79,8 +77,11 @@ ul.numberedchapters {
     margin-left: 10px;
     margin-bottom: unset;
 }
-.toc_transform {
-    transition: all 0.8s ease!important;
+
+@media not prefers-reduced-motion {
+    .toc_transform {
+        transition: all 0.8s ease;
+    }
 }
 
 #main_content {
@@ -201,7 +202,7 @@ section > .toc {
     }
 
     #toc {
-        max-width: 94%!important;
+        max-width: 94%;
     }
 
     ul.breadcrumb {
@@ -211,17 +212,13 @@ section > .toc {
         width: 70%;
     }
 
-    #toc_header {
-        width: 90%;
-    }
-
     .consuming_mode .toc_overview {
-        top: 51px!important;
+        top: 51px;
     }
 }
 
 .wiki {
-    border: unset!important;
+    border: unset;
 }
 
 .action-menu {
