Resolve "Polishing für die neue HTML-Stuktur" Teil 1
Closes #1886 and #1888

Merge request studip/studip!1231

--- a/resources/assets/stylesheets/scss/responsive.scss
+++ b/resources/assets/stylesheets/scss/responsive.scss
@@ -284,16 +284,14 @@ $sidebarOut: -330px;
 
     #header-links {
         > ul {
-            margin-right: 10px;
+            > li:not(#responsive-toggle-fullscreen):not(.helpbar-container) {
+                display: none;
+            }
 
-            li {
-                padding: 0;
-
-                &.helpbar-container {
-                    float: unset;
-                    margin-top: 5px;
-                    right: 5px;
-                }
+            > li.helpbar-container {
+                float: unset;
+                margin-top: 5px;
+                right: 30px;
             }
         }
 
@@ -505,7 +503,7 @@ $sidebarOut: -330px;
 
         #responsive-toggle-fullscreen {
             display: block;
-            margin-right: 5px;
+            right: 15px;
         }
 
         .contentbar:not(#responsive-contentbar) {
@@ -704,27 +702,18 @@ html:not(.responsive-display):not(.fullscreen-mode) {
             margin-right: 0;
         }
 
-        #current-page-structure, #top-bar, #navigation-level-1, #layout_content {
+        #current-page-structure,
+        #top-bar,
+        #navigation-level-1 {
             min-width: inherit !important;
-        }
-
-        #layout_content {
-            margin: 0px 4px;
         }
 
         #index,
         #login,
         #request_new_password,
         #web_migrate {
-            div.index_container {
-                height: calc(100% - 74px);
-                position: static;
-                top: 0;
-
-                div.messagebox,
-                div.index_main {
-                    margin: 1em auto;
-                }
+            .messagebox {
+                margin: 0;
             }
 
             #background-desktop,
@@ -739,10 +728,47 @@ html:not(.responsive-display):not(.fullscreen-mode) {
         #login,
         #request_new_password,
         #web_migrate {
-            div.index_container {
-                div.messagebox,
-                div.index_main {
-                    margin: 0 auto;
+
+            #responsive-contentbar {
+                display: none;
+            }
+
+            main {
+                margin: 0;
+                padding: 0;
+                width: calc(100% - 10px);
+            }
+
+        }
+
+        #header-links {
+            display: none;
+        }
+
+        #background-desktop {
+            display: none;
+        }
+
+        #background-mobile {
+            display: inherit;
+            width: 100vw;
+            height: 100vh;
+            top:0;
+            left: 0;
+        }
+
+        #loginbox {
+            box-shadow: unset;
+            margin: 0;
+            width: calc(100vw - 40px);
+
+            nav ul {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+
+                .login_link {
+                    width: unset;
                 }
             }
         }
@@ -794,3 +820,5 @@ html:not(.responsive-display):not(.fullscreen-mode) {
         max-width: 100vw;
     }
 }
+
+
