--- a/resources/assets/stylesheets/scss/article.scss
+++ b/resources/assets/stylesheets/scss/article.scss
@@ -1,7 +1,11 @@
 article.studip {
-    border-color: $content-color-40;
-    border-style: solid;
-    border-width: 1px;
+
+    &:not(.wiki) {
+        border-color: $content-color-40;
+        border-style: solid;
+        border-width: 1px;
+    }
+
     margin-bottom: 10px;
     transition: all 300ms ease 0s;
     padding: 10px;
