--- a/resources/assets/stylesheets/scss/layouts.scss
+++ b/resources/assets/stylesheets/scss/layouts.scss
@@ -152,8 +152,7 @@ body {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     justify-content: flex-start;
-    margin: 15px 15px 15px 2px;
-    padding: 0 $content-margin 47px $content-margin;
+    margin: $page-margin;
     position: relative;
     vertical-align: top;
 
@@ -215,12 +214,37 @@ body {
     padding: 2px 0;
     grid-column: 1 / 3;
     grid-row: 3 / 4;
+    justify-content: space-between;
+    line-height: $footer-height - 4px;
 }
 
 #main-footer-info {
     margin-left: 8px;
-    margin-top: 2px;
-    line-height: 28px;
+}
+
+#main-footer-navigation {
+    ul {
+        display: flex;
+        flex: 1;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        list-style-type: none;
+        padding: 0;
+
+        li {
+            margin-left: 2px;
+            margin-right: 2px;
+
+            a {
+                color: $white;
+                margin: 0 6px;
+                text-decoration: none;
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
 }
 
 #navigation-level-1 {
