--- a/resources/assets/stylesheets/scss/skiplinks.scss
+++ b/resources/assets/stylesheets/scss/skiplinks.scss
@@ -2,12 +2,20 @@
 #skip_link_navigation {
     background-color: $white;
     border: 2px solid $orange;
-    left: -600px;
+    left: 50vw;
     margin: 0;
     padding: 10px;
     position: fixed;
+    transform: translateX(-50%);
+    transition: opacity 0.5s linear;
     top: 20px;
     z-index: 3000;
+
+
+    &:not(:focus-within) {
+        opacity: 0;
+        pointer-events: none;
+    }
 
     ul {
         list-style-type: none;
@@ -16,21 +24,22 @@
     }
 }
 
-.skip_target {
-    position: absolute;
-    @include hide-text();
-}
-
-#skiplink_list {
-    display: none;
-}
-
 button.skiplink {
     border: 0;
     background-color: $white;
     color: $base-color;
+    cursor: pointer;
     line-height: 1em;
     margin-bottom: 0.1em;
+
+    &:hover,
+    &:active {
+        color: $active-color;
+    }
+
+    @media not prefers-reduced-motion {
+        transition: color 0.3s;
+    }
 }
 
 body.enable-skiplinks {
