resurrect .quiet color, fixes #1532
Closes #1532

Merge request studip/studip!1249

--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -95,7 +95,9 @@ ul.clean, ol.clean {
     color: black;
     font-size: 0.75em;
 }
-.quiet { color: black; }
+.quiet {
+    color: var(--dark-gray-color-60);
+}
 
 .middle      { vertical-align: middle; }
 .text-bottom { vertical-align: text-bottom; }
