Resolve "Polishing für die neue HTML-Struktur und die responsive Ansicht" Teil 2
Closes #1858, #1906, #1905, #1881, #1884, and #1882

Merge request studip/studip!1234

--- a/resources/assets/stylesheets/scss/layouts.scss
+++ b/resources/assets/stylesheets/scss/layouts.scss
@@ -288,6 +288,7 @@ body {
             justify-content: space-between;
             background-color: $dark-gray-color-10;
             font-size: 0.9em;
+            height: 2.3em;
             border-bottom: 1px solid $dark-gray-color-40;
         }
 
