--- a/resources/assets/stylesheets/scss/questionnaire.scss
+++ b/resources/assets/stylesheets/scss/questionnaire.scss
@@ -1,4 +1,158 @@
+$width: 270px;
+
 .questionnaire_edit {
+
+
+    .editor {
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: stretch;
+        width: 100%;
+        aside {
+            background: $white;
+            border: 1px solid $content-color-40;
+            min-width: $width;
+            width: $width;
+            .questions_container {
+                padding: 0px;
+                .questions {
+                    display: flex;
+                    flex-direction: column;
+                }
+            }
+
+            > .admin, > .add_question, .questions > * {
+                width: calc(100% - 8px);
+                padding: 4px;
+                border-bottom: 1px solid $content-color-40;
+                min-height: 40px;
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                position: relative;
+                > .icon {
+                    width: 30px;
+                    height: 30px;
+                    margin-right: 10px;
+                    margin-left: 7px;
+                }
+                &.active {
+                    background-color: $yellow-40;
+
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        height: 0px;
+                        width: 0px;
+                        border-top: 25px transparent solid;
+                        border-bottom: 25px transparent solid;
+                        border-left: 7px $content-color-40 solid;
+                        right: -8px;
+                    }
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        height: 0px;
+                        width: 0px;
+                        border-top: 25px transparent solid;
+                        border-bottom: 25px transparent solid;
+                        border-left: 7px $yellow-40 solid;
+                        right: -7px;
+                    }
+                }
+            }
+            .questions {
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                flex-direction: column;
+                > * {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    > :first-child {
+                        width: 100%;
+                        overflow: hidden;
+                    }
+                }
+                a {
+                    display: flex;
+                    align-items: center;
+                    .icon {
+                        width: 30px;
+                        height: 30px;
+                        margin-right: 10px;
+                        margin-left: 7px;
+                        cursor: grabbing;
+                    }
+                }
+
+            }
+
+        }
+        .rightside {
+            border: 1px solid $content-color-40;
+            border-left: none;
+            width: 100%;
+            padding: 10px;
+            padding-left: 15px;
+            min-height: 150px;
+        }
+        .vote_edit {
+            .options {
+                > li {
+                    display: flex;
+                    align-items: center;
+                    > * {
+                        margin-right: 10px;
+                    }
+                }
+            }
+        }
+        .rangescale_edit table.default > thead > tr > th.number {
+            padding-left: 12px;
+        }
+
+        .dragcolumn {
+            max-width: 8px;
+        }
+
+        .dragarea {
+            cursor: grabbing;
+        }
+
+        .input-array {
+            margin-left: 4px;
+        }
+
+        .likert_edit .input-array {
+            margin-left: 7px;
+        }
+        .inline_editing {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            input {
+                width: calc(100% - 74px);
+                border: 1px solid $light-gray-color-40;
+            }
+            button {
+                border: 1px solid $light-gray-color-40;
+                width: 32px;
+                height: 32px;
+                padding: 6px;
+                margin-left: 5px;
+                background-color: white;
+                cursor: pointer;
+                display: inline-flex;
+                align-items: center;
+                justify-items: center;
+            }
+        }
+    }
+
+    /* ab hier der alte kram */
+
     section {
         border: thin solid $black;
         margin: 3px;
@@ -149,17 +303,39 @@
 }
 
 
-.questionnaire_answer > article {
-    padding: 7px;
-    border: none;
-    border-top: 1px solid $content-color-40;
-
-    > :first-child {
-        margin-top: 0px;
+.questionnaire_answer, .questionnaire_results {
+    .description_container {
+        display: flex;
+        > .icon_container {
+            width: 30px;
+            height: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-right: 3px;
+            margin-bottom: 10px;
+        }
+        > .description {
+            margin-top: 6px;
+            width: 100%;
+            iframe {
+                width: 100%;
+                height: 400px;
+                border: none;
+            }
+        }
     }
+    > article {
+        padding: 7px;
+        border: none;
 
-    .invalidation_notice {
-        color: $red;
+        > :first-child {
+            margin-top: 0px;
+        }
+
+        .invalidation_notice {
+            color: $red;
+        }
     }
 }
 
